update styling (AI generated, i dont do frontend), fix minor issues

--- a/resultPage.html
+++ b/resultPage.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprout9|Calculator</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sprout9 | Calculator Resultaten</title>
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf@latest/dist/jspdf.umd.min.js"></script>
     <script type="module" src="ResultPageChart.js" defer></script>
     <script type="module" src="resultPage.js" defer></script>
     <script type="module" src="generatePdf.js" defer></script>
-    <link rel="stylesheet" href="style.css">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 </head>
 
 <body>
-    <!-- <nav class="bg-gray-800 p-4">
-        <div class="container mx-auto">
-            <h1 class="text-white text-2xl font-bold">Sprout9 Calculator</h1>
-        </div>
-    </nav> -->
-    <!-- <div class="bg-white place-items-center p-6 rounded-lg shadow-md"> -->
-    <h1 id="resultaten-h1">Resultaten</h1>
-    <p><a href="index.html">Wijzig gegevens</a></p>
-    <div id="demografie-chart-container">
-        <h2>Demografie</h2>
-        <canvas id="demografie-chart"></canvas>
-        <div id="demografie-uitleg-container"></div>
-    </div>
+    <main class="container">
+        <h1 id="resultaten-h1">Resultaten</h1>
+        <p><a href="index.html">Wijzig gegevens</a></p>
+        
+        <section id="demografie-chart-container" class="chart-container">
+            <h2>Demografie</h2>
+            <canvas id="demografie-chart"></canvas>
+            <div id="demografie-uitleg-container"></div>
+        </section>
 
-    <div id="taken-uren-chart-container">
-        <h2>Taken uren (per week)</h2>
-        <canvas id="taken-uren-chart"></canvas>
-        <div id="demografie-uitleg-container"></div>
-    </div>
+        <section id="taken-uren-chart-container" class="chart-container">
+            <h2>Taken uren (per week)</h2>
+            <canvas id="taken-uren-chart"></canvas>
+            <div id="taken-uren-uitleg-container"></div>
+            </section>
 
-    <div id="contact">
-        <p>Heeft u behoefte aan extra informatie? Neem <a href="mailto:jelle.timmers@sprout9.nl">hier</a> contact op!</p>
-        <p>Of bezoek onze <a href="https://www.sprout9.nl/" target="_blank">site</a></p>
-        <button id="return-btn">Formulier opnieuw invullen</button>
-        <button id="create-pdf-btn">Genereer PDF</button>
-        <button id="save-pdf-btn">Sla PDF op</button>
-    </div>
+        <section id="contact">
+            <p>Heeft u behoefte aan extra informatie? Neem <a href="mailto:jelle.timmers@sprout9.nl">hier</a> contact op!</p>
+            <p>Of bezoek onze <a href="https://www.sprout9.nl/" target="_blank">site</a></p>
+            <button id="return-btn">Formulier opnieuw invullen</button>
+            <button id="create-pdf-btn">Genereer PDF</button>
+            <button id="save-pdf-btn">Sla PDF op</button>
+        </section>
+        
+        </main>
 </body>
 
 </html>
