update resultpage and pdf-generation

--- a/resultPage.html
+++ b/resultPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -25,7 +25,7 @@
         </section>
 
         <section id="taken-uren-chart-container" class="chart-container">
-            <h2>Taken uren (per week)</h2>
+            <h2>Taken op afdeling (in uren per week)</h2>
             <canvas id="taken-uren-chart"></canvas>
             <div id="taken-uren-uitleg-container"></div>
             </section>
